Bug Fix: App.css overflow-x is hidden + Added theme to genreModals + Added cross svg to modals + Fixed uneven gaping in cards + Fixed Heading looks across various screen + changes pricing links gold + silver

--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,6 @@
   flex-direction: column;
   position: absolute;
   width: 100%;
+  overflow-x: hidden;
   /* z-index: 0; */
 }
